Fix type fonction problem and popin z-index problem

--- a/webapp/assets/scss/components/style/row/top-row.scss
+++ b/webapp/assets/scss/components/style/row/top-row.scss
@@ -1,7 +1,6 @@
 @use '../../../variables' as *;
 
 .row-top {
-  z-index: 0;
   position: relative;
 
   &__popin{
